[package]
name = "pv_recorder"
version = "1.2.7"  # Bumped for fixes
edition = "2021"   # FIX: Updated from 2018
rust-version = "1.70"  # Minimum supported Rust version
description = "Rust recorder library for Picovoice"
license = "Apache-2.0"
repository = "https://github.com/Picovoice/pvrecorder"
documentation = "https://docs.rs/pv_recorder"
readme = "README.md"
keywords = [
    "audio",
    "recorder",
    "microphone",
    "picovoice",
]
categories = ["multimedia::audio", "api-bindings"]
publish = true
include = [
    ".gitignore",
    "build.rs",
    "Cargo.toml",
    "data/",
    "README.md",
    "src/",
]

[lib]
name = "pv_recorder"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
libc = "0.2"
libloading = "0.8"

[dev-dependencies]
# For better test output
# pretty_assertions = "1.4"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
# Allow some pedantic lints that are too strict
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
